<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Thorfun</string>
    <string name="loading">Loading</string>
    <string name="main_menu_login">Login</string>
    <string name="main_menu_logout">Logout</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_submit_button">Login</string>
    <string name="login_error_message">Wrong username or password</string>
    <string name="story_title">Stories</string>
    <string name="my_story_title">My Stories</string>
    <string name="top_story_title">Top Stories</string>
    <string name="list_top_button">Go to top</string>
    <string name="story_row_image">Story Image</string>
    <string name="story_menu_share">Share</string>
    <string name="story_menu_like">Like</string>
    <string name="story_view_menu_content">Content</string>
    <string name="story_view_menu_comments">Comments</string>
    <string name="story_comment_avartar">User avatar Image</string>
    <string name="story_comment_submit">Post</string>
    <string name="story_comment_empty">No comment</string>
    <string name="board_title">Board</string>
    <string name="board_post_avatar">User Avatar Image</string>
    <string name="board_post_comment">{number} comment(s)</string>
    <string name="board_post_submit">Post</string>
    <string name="board_post_title">Post</string>
    <string name="board_post_reply_submit">Comment</string>
    <string name="browser_back">Back</string>
    <string name="browser_forward">Forward</string>
    <string name="browser_share">Share</string>
    <string name="story_comment_reply_title">Replies</string>
    <string name="story_comment_reply_submit">Reply</string>
    <string name="intent_view_story">View Thorfun Story</string>

</resources>