<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <GridView
        android:id="@+id/post_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/post_field"
        android:numColumns="1"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:verticalSpacing="6dp" >
    </GridView>

    <Button
        android:id="@+id/story_top_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/list_top_button"
        android:minHeight="14dp"
        android:paddingBottom="6dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="6dp"
        android:text="@string/list_top_button"
        android:textSize="14sp"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/post_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" >

        <EditText
            android:id="@+id/post_field_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/post_field_submit"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/post_field_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/board_post_submit" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/thorfun.loading_background" >

        <ProgressBar
            android:id="@+id/post_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            style="@style/Widget.Thorfun.Loading.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/post_progress"
            android:layout_centerHorizontal="true"
            android:text="@string/loading" />
    </RelativeLayout>

</RelativeLayout>